--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "ethers": "^5.0.14",
+    "pancakeswap-bsc-sdk": "^1.0.6",
     "register-service-worker": "^1.7.1",
     "terminal.css": "^0.7.1",
     "vue": "^2.6.11",
